# fast-parser

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: docker-publish.yml
app/: __init__.py  engines.py  main.py
scripts/: build-and-push.sh
tests/: conftest.py  test_engines.py  test_main.py
